# aspai_active

./: .gitignore  CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  setup.py
aspai_active/: __init__.py  acquisition.py  active_learner.py  model.py  utils.py
examples/: demo.py  example_3d.py  example_highdim.py  view_results.html
